[package]
edition = "2021"
name = "native-is-elevated-rs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.9.0", default-features = false, features = ["napi4"] }
napi-derive = "2.9.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.43.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading"
]

[target.'cfg(not(windows))'.dependencies.nix]
version = "0.26.1"
features = [
    "user"
]

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
